// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Title 可以正确渲染字体大字 1`] = `
<body>
  <div>
    <p
      style="font-size: 2rem; color: red;"
    >
      大字
    </p>
  </div>
</body>
`;

exports[`>>> Title 可以正确渲染字体小字 1`] = `
<body>
  <div>
    <p
      style="font-size: 0.5rem; color: green;"
    >
      小字
    </p>
  </div>
</body>
`;
